--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
    
 <h1>This is my Portfolio Page!</h1>
 
-<img src="images/portfolio.jpg" height="250">
+<img src="Images/Port.jpg" height="250">
 <br>
 <a target="_blank" href="http://scratch.mit.edu">
-<img src="images/scratchlogo.png" height="100">
+<img src="Images/Home1.jpg" height="500">
 </a>
 </body>
 </html>
