--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <a href="portfolio.html">Portfolio</a>
 
-<h1>This is my test Home Page!</h1>
+<h1>This is my Home Page!</h1>
 
-<img src="Images/home.jpg" height="250">
+<img src="Images/owl.jpg" height="250">
 
 
 </body>
