--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,14 @@
     
    <a href="portfolio.html">Portfolio</a>
    
-<h1>This is my Portfolio Page!</h1>
+<h1>Portfolio Page</h1>
 
 <img src="Images/Port.jpg" height="250">
 <br>
 <a target="_blank" href="http://scratch.mit.edu">
 <img src="Images/Home1.jpg" height="500">
+<body background="https://images6.alphacoders.com/482/482537.jpg">
+    
 </a>
 </body>
 </html>
