--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
 <h1>This is my Home Page!</h1>
 
-<img src="Images/owl.jpg" height="250">
+<img src="Images/owl.jpg" height="150">
 
-<body background="https://images6.alphacoders.com/482/482537.jpg">
-    
+<body background="http://oi40.tinypic.com/rm8wb8.jpg">
 </body>
 
 </html>
