--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,8 @@
 <img src="Images/Port.jpg" height="250">
 <br>
 <a target="_blank" href="http://scratch.mit.edu">
-<a href="url">https://scratch.mit.edu/studios/3428508/</a>
+<a href="https://scratch.mit.edu/projects/120901768/">My Scratch projects</a></a>
+
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
     
 </a>
