--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
 <img src="Images/Port.jpg" height="250">
 <br>
 <a target="_blank" href="http://scratch.mit.edu">
-<a href="https://scratch.mit.edu/projects/120901768/">My Scratch projects</a></a>
-
+<a href="https://scratch.mit.edu/projects/120901768/">My Scratch Projects 1.1.3</a></a>
+<a href="https://scratch.mit.edu/projects/121208155/">My Scratch Projects 1.1.5</a></a>
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
     
 </a>
