--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,15 @@
    
 <h1>Portfolio Page</h1>
 
-<img src="Images/Port.jpg" height="250">
+<img src="Images/Down.JPG" height="250">
 <br>
 <a target="_blank" href="http://scratch.mit.edu">
 <a href="https://scratch.mit.edu/projects/120901768/">My Scratch Projects 1.1.3</a></a>
+extra &nbsp;&nbsp; space
+<a href="https://scratch.mit.edu/projects/121044718/">My Scratch Projects 1.1.4</a></a>
+extra &nbsp;&nbsp; space
 <a href="https://scratch.mit.edu/projects/121208155/">My Scratch Projects 1.1.5</a></a>
+extra &nbsp;&nbsp; space
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
     
 </a>
