--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <img src="Images/owl.jpg" height="150">
 
+<h2>Hello everyone</h2>
+
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
 </body>
 
