--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,12 @@
    
 <h1>Portfolio Page</h1>
 
+<h2>Check out my scratch project!</h2>
 <img src="Images/Down.JPG" height="250">
 <br>
+
+
+
 <a target="_blank" href="http://scratch.mit.edu">
 <a href="https://scratch.mit.edu/projects/120901768/">My Scratch Projects 1.1.3</a></a>
 &nbsp;&nbsp;
@@ -26,6 +30,7 @@
 &nbsp;&nbsp;
 <a href="https://scratch.mit.edu/projects/121208155/">My Scratch Projects 1.1.5</a></a>
 &nbsp;&nbsp;
+<a href="https://scratch.mit.edu/projects/121794700/">My Scratch Projects 1.1.6</a></a>
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
     
 </a>
