--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,10 @@
 <a href="https://scratch.mit.edu/projects/121208155/">My Scratch Projects 1.1.5</a></a>
 &nbsp;&nbsp;
 <a href="https://scratch.mit.edu/projects/121794700/">My Scratch Projects 1.1.6</a></a>
+&nbsp;&nbsp;
+<a href="https://scratch.mit.edu/projects/122821264/#editor">My Scratch Projects 1.1.7</a></a>
+&nbsp;&nbsp;
+<a href="http://screencast.com/t/LKnOwpt2hMz3">1.1.7 Video</a></a>
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
     
 </a>
