--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <a href="portfolio.html">Portfolio</a>
 
+<a href="App inventor project.html"></a>
+
 <h1>This is my Home Page!</h1>
 
 <img src="Images/owl.jpg" height="150">
