--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,15 @@
 <a href="https://scratch.mit.edu/projects/122821264/#editor">My Scratch Projects 1.1.7</a></a>
 &nbsp;&nbsp;
 <a href="http://screencast.com/t/LKnOwpt2hMz3">1.1.7 Video</a></a>
-<body background="http://oi40.tinypic.com/rm8wb8.jpg">
-    
+&nbsp;&nbsp; 
+    <h3>Although I am not really good at APP Inventor, but there are some of my projects I would like to share with you</h3>
+<img src="Images/longhairdown.jpg" height="250">
+<br>
+<a href="https://drive.google.com/drive/folders/0B3aL-ubXszr2ajlWNUxnVUJNTTQ?usp=sharing">Design an App-incompleted</a></a>
+&nbsp;&nbsp; 
+<a href="https://drive.google.com/file/d/0B3aL-ubXszr2cS04b21xQ1d6bjQ/view?usp=sharing">Color Chooser Practice</a></a>
+&nbsp;&nbsp; 
+
 </a>
 </body>
 </html>
