michael's fav animal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <img src="Images/owl.jpg" height="150">
 
-<h2>Hello everyone</h2>
+<h2>Hello everyone, welcome to my home page</h2>
 
 <body background="http://oi40.tinypic.com/rm8wb8.jpg">
 </body>
