--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
    
 <h1>Portfolio Page</h1>
 
-<a href='https://project-2-1-4-tmps9730635.c9users.io'>What Animal Does Michael Like?</a>>
+<a href='https://project-2-1-4-tmps9730635.c9users.io/ice.html'>What Animal Does Michael Like? </a>
 
 <h2>Check out my scratch project!</h2>
 <img src="Images/Down.JPG" height="250">
