--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,9 @@
    <a href="portfolio.html">Portfolio</a>
    
 <h1>Portfolio Page</h1>
+<a href='https://tmps9730635.github.io/2.2.1/index.html'>Project 2.2.1 Desserts </a>
 
-<a href='https://project-2-1-4-tmps9730635.c9users.io/ice.html'>Project2.1.4 What Animal Does Michael Like? </a>
+<a href='https://project-2-1-4-tmps9730635.c9users.io/ice.html'>Project 2.1.4 What Animal Does Michael Like? </a>
 
 <h2>Check out my scratch project!</h2>
 <img src="Images/Down.JPG" height="250">
@@ -38,7 +39,7 @@
 &nbsp;&nbsp;
 <a href="http://screencast.com/t/LKnOwpt2hMz3">1.1.7 Video</a></a>
 &nbsp;&nbsp; 
-    <h3>Although I am not really good at APP Inventor, but there are some of my projects I would like to share with you</h3>
+    <h3>Although I am not really good at APP Inventor, but here are some of my projects I would like to share with you</h3>
 <img src="Images/longhairdown.jpg" height="250">
 <br>
 <a href="https://drive.google.com/drive/folders/0B3aL-ubXszr2ajlWNUxnVUJNTTQ?usp=sharing">Design an App-incompleted</a></a>
