--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
    <a href="portfolio.html">Portfolio</a>
    
 <h1>Portfolio Page</h1>
-<a href='https://tmps9730635.github.io/2.2.1/index.html'>Project 2.2.1 Desserts </a>
+<a href='https://tmps9730635.github.io/2.2.1/index.html'>Project 2.2.1 Desserts </a>&nbsp;&nbsp;
 
 <a href='https://project-2-1-4-tmps9730635.c9users.io/ice.html'>Project 2.1.4 What Animal Does Michael Like? </a>
 
